charts/gitlab/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-datalab-to-gitlab
  namespace: datalab
spec:
  egress:
  - ports:
    - port: 8181
      protocol: TCP
    - port: 8080
      protocol: TCP
    - port: 80
      protocol: TCP
    to:
    - ipBlock:
        cidr: ENTER_YOUR_IP/32
    - podSelector:
        matchLabels:
          gitlab.com/webservice-name: default
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gitlab
  ingress:
  - from:
    - podSelector:
        matchLabels:
          kubernetes.io/metadata.name: gitlab
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
